# bibtex_fields

./: .gitignore  MANIFEST.in  README.md  cl_sg_corrected.bib  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
bibtex_clean/: __init__.py  clean.py  cli.py  hardcoded_words.py  temp.py  title_styler.py
bibtex_clean.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bibtex_clean/style_fields/: aer.json
src/: blah.py  clean.py  temp.txt  temp2.txt  temp3.txt
style_fields/: aer.json  jpe.json
test_files/: cl_sg_bib.bib  cl_sg_bib_cleaned.bib
tests/: test_bib.bib
