[metadata]
name = bibtex-fields
version = 0.0.1
author = Cangyuan Li
author_email = everest229@gmail.com
description = A module to clean bibtex files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CangyuanLi/bibtex_fields
license = MIT
license_file = LICENSE
platforms = osx
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src